# mikrotik-api4smartdns

./: README.md
.github/workflows/: deploy.yml
mikrotik-api/: Cargo.toml  Makefile  build.rs
mikrotik-api/.cargo/: config.toml
mikrotik-api/src/: lib.rs  mikrotik_api.rs  plugin.rs  smartdns.rs
